src/libguac/guacamole/client.h


typedef struct guac_client_internal guac_client_internal;
struct guac_client {
    guac_socket* socket;
    guac_socket* pending_socket;
    guac_client_state state;
    void* data;
    guac_timestamp last_sent_timestamp;
    guac_client_free_handler* free_handler;
    guac_client_log_handler* log_handler;
    guac_pool* __buffer_pool;
    guac_pool* __layer_pool;
    guac_pool* __stream_pool;
    guac_stream* __output_streams;
    char* connection_id;
    guac_rwlock __users_lock;
    guac_user* __users;
    guac_rwlock __pending_users_lock;
    timer_t __pending_users_timer;
    int __pending_users_timer_state;
    pthread_mutex_t __pending_users_timer_mutex;
    guac_user* __pending_users;
    guac_user* __owner;
    int connected_users;
    guac_user_join_handler* join_handler;
    guac_client_join_pending_handler* join_pending_handler;
    guac_user_leave_handler* leave_handler;
    const char** args;
    void* __plugin_handle;
    guac_client_internal* internal;
};
int guac_client_add_user(guac_client* client, guac_user* user, int argc, char** argv);
void guac_client_remove_user(guac_client* client, guac_user* user);
void guac_client_foreach_user(guac_client* client,
        guac_user_callback* callback, void* data);
void guac_client_foreach_pending_user(guac_client* client,
        guac_user_callback* callback, void* data);
void* guac_client_for_owner(guac_client* client, guac_user_callback* callback,
        void* data);
void* guac_client_for_user(guac_client* client, guac_user* user,
        guac_user_callback* callback, void* data);
int guac_client_end_frame(guac_client* client);
int guac_client_end_multiple_frames(guac_client* client, int frames);
int guac_client_load_plugin(guac_client* client, const char* protocol);
int guac_client_get_processing_lag(guac_client* client);
int guac_client_owner_send_required(guac_client* client, const char** required);
void guac_client_stream_argv(guac_client* client, guac_socket* socket,
        const char* mimetype, const char* name, const char* value);
void guac_client_stream_png(guac_client* client, guac_socket* socket,
        guac_composite_mode mode, const guac_layer* layer, int x, int y,
        cairo_surface_t* surface);
void guac_client_stream_jpeg(guac_client* client, guac_socket* socket,
        guac_composite_mode mode, const guac_layer* layer, int x, int y,
        cairo_surface_t* surface, int quality);
void guac_client_stream_webp(guac_client* client, guac_socket* socket,
        guac_composite_mode mode, const guac_layer* layer, int x, int y,
        cairo_surface_t* surface, int quality, int lossless);
int guac_client_owner_supports_msg(guac_client* client);
int guac_client_owner_supports_required(guac_client* client);
int guac_client_owner_notify_join(guac_client* client, guac_user* joiner);
int guac_client_owner_notify_leave(guac_client* client, guac_user* quitter);
int guac_client_supports_webp(guac_client* client);
extern const guac_layer* GUAC_DEFAULT_LAYER;