src/guacd/log.h


extern int guacd_log_level;
#define GUACD_LOG_NAME "guacd"
void vguacd_log(guac_client_log_level level, const char* format, va_list args);
void guacd_log(guac_client_log_level level, const char* format, ...);
void guacd_client_log(guac_client* client, guac_client_log_level level,
        const char* format, va_list args);
void guacd_log_guac_error(guac_client_log_level level, const char* message);
void guacd_log_handshake_failure();