src/guacd/ctypes_wrapper.h


#define GUACD_DEFAULT_BIND_HOST "localhost"
#define GUACD_DEFAULT_BIND_PORT "4822"
typedef struct guacd_config {
    char* bind_host;
    char* bind_port;
    char* pidfile;
    int foreground;
    int print_version;
#ifdef ENABLE_SSL
    char* cert_file;
    char* key_file;
#endif
    guac_client_log_level max_log_level;
} guacd_config;