python/guacd/ctypes_wrapper.py


# /opt/guacamole/include/guacamole/client.h: 472
if _libs["libguacd"].has("guac_client_add_user", "cdecl"):
    guac_client_add_user = _libs["libguacd"].get("guac_client_add_user", "cdecl")
    guac_client_add_user.argtypes = [POINTER(guac_client), POINTER(guac_user), c_int, POINTER(POINTER(c_char))]
    guac_client_add_user.restype = c_int

# /opt/guacamole/include/guacamole/client.h: 481
if _libs["libguacd"].has("guac_client_remove_user", "cdecl"):
    guac_client_remove_user = _libs["libguacd"].get("guac_client_remove_user", "cdecl")
    guac_client_remove_user.argtypes = [POINTER(guac_client), POINTER(guac_user)]
    guac_client_remove_user.restype = None

# /opt/guacamole/include/guacamole/client.h: 503
if _libs["libguacd"].has("guac_client_foreach_user", "cdecl"):
    guac_client_foreach_user = _libs["libguacd"].get("guac_client_foreach_user", "cdecl")
    guac_client_foreach_user.argtypes = [POINTER(guac_client), POINTER(guac_user_callback), POINTER(None)]
    guac_client_foreach_user.restype = None

# /opt/guacamole/include/guacamole/client.h: 523
if _libs["libguacd"].has("guac_client_foreach_pending_user", "cdecl"):
    guac_client_foreach_pending_user = _libs["libguacd"].get("guac_client_foreach_pending_user", "cdecl")
    guac_client_foreach_pending_user.argtypes = [POINTER(guac_client), POINTER(guac_user_callback), POINTER(None)]
    guac_client_foreach_pending_user.restype = None

# /opt/guacamole/include/guacamole/client.h: 552
if _libs["libguacd"].has("guac_client_for_owner", "cdecl"):
    guac_client_for_owner = _libs["libguacd"].get("guac_client_for_owner", "cdecl")
    guac_client_for_owner.argtypes = [POINTER(guac_client), POINTER(guac_user_callback), POINTER(None)]
    guac_client_for_owner.restype = POINTER(c_ubyte)
    guac_client_for_owner.errcheck = lambda v,*a : cast(v, c_void_p)

# /opt/guacamole/include/guacamole/client.h: 585
if _libs["libguacd"].has("guac_client_for_user", "cdecl"):
    guac_client_for_user = _libs["libguacd"].get("guac_client_for_user", "cdecl")
    guac_client_for_user.argtypes = [POINTER(guac_client), POINTER(guac_user), POINTER(guac_user_callback), POINTER(None)]
    guac_client_for_user.restype = POINTER(c_ubyte)
    guac_client_for_user.errcheck = lambda v,*a : cast(v, c_void_p)

# /opt/guacamole/include/guacamole/client.h: 604
if _libs["libguacd"].has("guac_client_end_frame", "cdecl"):
    guac_client_end_frame = _libs["libguacd"].get("guac_client_end_frame", "cdecl")
    guac_client_end_frame.argtypes = [POINTER(guac_client)]
    guac_client_end_frame.restype = c_int

# /opt/guacamole/include/guacamole/client.h: 628
if _libs["libguacd"].has("guac_client_end_multiple_frames", "cdecl"):
    guac_client_end_multiple_frames = _libs["libguacd"].get("guac_client_end_multiple_frames", "cdecl")
    guac_client_end_multiple_frames.argtypes = [POINTER(guac_client), c_int]
    guac_client_end_multiple_frames.restype = c_int

# /opt/guacamole/include/guacamole/client.h: 642
if _libs["libguacd"].has("guac_client_load_plugin", "cdecl"):
    guac_client_load_plugin = _libs["libguacd"].get("guac_client_load_plugin", "cdecl")
    guac_client_load_plugin.argtypes = [POINTER(guac_client), String]
    guac_client_load_plugin.restype = c_int

# /opt/guacamole/include/guacamole/client.h: 656
if _libs["libguacd"].has("guac_client_get_processing_lag", "cdecl"):
    guac_client_get_processing_lag = _libs["libguacd"].get("guac_client_get_processing_lag", "cdecl")
    guac_client_get_processing_lag.argtypes = [POINTER(guac_client)]
    guac_client_get_processing_lag.restype = c_int

# /opt/guacamole/include/guacamole/client.h: 672
if _libs["libguacd"].has("guac_client_owner_send_required", "cdecl"):
    guac_client_owner_send_required = _libs["libguacd"].get("guac_client_owner_send_required", "cdecl")
    guac_client_owner_send_required.argtypes = [POINTER(guac_client), POINTER(POINTER(c_char))]
    guac_client_owner_send_required.restype = c_int

# /opt/guacamole/include/guacamole/client.h: 698
if _libs["libguacd"].has("guac_client_stream_argv", "cdecl"):
    guac_client_stream_argv = _libs["libguacd"].get("guac_client_stream_argv", "cdecl")
    guac_client_stream_argv.argtypes = [POINTER(guac_client), POINTER(guac_socket), String, String, String]
    guac_client_stream_argv.restype = None

# /opt/guacamole/include/guacamole/client.h: 730
if _libs["libguacd"].has("guac_client_stream_png", "cdecl"):
    guac_client_stream_png = _libs["libguacd"].get("guac_client_stream_png", "cdecl")
    guac_client_stream_png.argtypes = [POINTER(guac_client), POINTER(guac_socket), guac_composite_mode, POINTER(guac_layer), c_int, c_int, POINTER(cairo_surface_t)]
    guac_client_stream_png.restype = None

# /opt/guacamole/include/guacamole/client.h: 768
if _libs["libguacd"].has("guac_client_stream_jpeg", "cdecl"):
    guac_client_stream_jpeg = _libs["libguacd"].get("guac_client_stream_jpeg", "cdecl")
    guac_client_stream_jpeg.argtypes = [POINTER(guac_client), POINTER(guac_socket), guac_composite_mode, POINTER(guac_layer), c_int, c_int, POINTER(cairo_surface_t), c_int]
    guac_client_stream_jpeg.restype = None

# /opt/guacamole/include/guacamole/client.h: 813
if _libs["libguacd"].has("guac_client_stream_webp", "cdecl"):
    guac_client_stream_webp = _libs["libguacd"].get("guac_client_stream_webp", "cdecl")
    guac_client_stream_webp.argtypes = [POINTER(guac_client), POINTER(guac_socket), guac_composite_mode, POINTER(guac_layer), c_int, c_int, POINTER(cairo_surface_t), c_int, c_int]
    guac_client_stream_webp.restype = None

# /opt/guacamole/include/guacamole/client.h: 830
if _libs["libguacd"].has("guac_client_owner_supports_msg", "cdecl"):
    guac_client_owner_supports_msg = _libs["libguacd"].get("guac_client_owner_supports_msg", "cdecl")
    guac_client_owner_supports_msg.argtypes = [POINTER(guac_client)]
    guac_client_owner_supports_msg.restype = c_int

# /opt/guacamole/include/guacamole/client.h: 845
if _libs["libguacd"].has("guac_client_owner_supports_required", "cdecl"):
    guac_client_owner_supports_required = _libs["libguacd"].get("guac_client_owner_supports_required", "cdecl")
    guac_client_owner_supports_required.argtypes = [POINTER(guac_client)]
    guac_client_owner_supports_required.restype = c_int

# /opt/guacamole/include/guacamole/client.h: 863
if _libs["libguacd"].has("guac_client_owner_notify_join", "cdecl"):
    guac_client_owner_notify_join = _libs["libguacd"].get("guac_client_owner_notify_join", "cdecl")
    guac_client_owner_notify_join.argtypes = [POINTER(guac_client), POINTER(guac_user)]
    guac_client_owner_notify_join.restype = c_int

# /opt/guacamole/include/guacamole/client.h: 881
if _libs["libguacd"].has("guac_client_owner_notify_leave", "cdecl"):
    guac_client_owner_notify_leave = _libs["libguacd"].get("guac_client_owner_notify_leave", "cdecl")
    guac_client_owner_notify_leave.argtypes = [POINTER(guac_client), POINTER(guac_user)]
    guac_client_owner_notify_leave.restype = c_int

# /opt/guacamole/include/guacamole/client.h: 894
if _libs["libguacd"].has("guac_client_supports_webp", "cdecl"):
    guac_client_supports_webp = _libs["libguacd"].get("guac_client_supports_webp", "cdecl")
    guac_client_supports_webp.argtypes = [POINTER(guac_client)]
    guac_client_supports_webp.restype = c_int

# /opt/guacamole/include/guacamole/client.h: 899
try:
    GUAC_DEFAULT_LAYER = (POINTER(guac_layer)).in_dll(_libs["libguacd"], "GUAC_DEFAULT_LAYER")
except:
    pass

# /tmp/guacamole-server/src/guacd/log.h: 32
try:
    guacd_log_level = (c_int).in_dll(_libs["libguacd"], "guacd_log_level")
except:
    pass

# /tmp/guacamole-server/src/guacd/log.h: 43
if _libs["libguacd"].has("vguacd_log", "cdecl"):
    vguacd_log = _libs["libguacd"].get("vguacd_log", "cdecl")
    vguacd_log.argtypes = [guac_client_log_level, String, c_void_p]
    vguacd_log.restype = None

# /tmp/guacamole-server/src/guacd/log.h: 49
if _libs["libguacd"].has("guacd_log", "cdecl"):
    _func = _libs["libguacd"].get("guacd_log", "cdecl")
    _restype = None
    _errcheck = None
    _argtypes = [guac_client_log_level, String]
    guacd_log = _variadic_function(_func,_restype,_argtypes,_errcheck)

# /tmp/guacamole-server/src/guacd/log.h: 55
if _libs["libguacd"].has("guacd_client_log", "cdecl"):
    guacd_client_log = _libs["libguacd"].get("guacd_client_log", "cdecl")
    guacd_client_log.argtypes = [POINTER(guac_client), guac_client_log_level, String, c_void_p]
    guacd_client_log.restype = None

# /tmp/guacamole-server/src/guacd/log.h: 63
if _libs["libguacd"].has("guacd_log_guac_error", "cdecl"):
    guacd_log_guac_error = _libs["libguacd"].get("guacd_log_guac_error", "cdecl")
    guacd_log_guac_error.argtypes = [guac_client_log_level, String]
    guacd_log_guac_error.restype = None

# /tmp/guacamole-server/src/guacd/log.h: 69
if _libs["libguacd"].has("guacd_log_handshake_failure", "cdecl"):
    guacd_log_handshake_failure = _libs["libguacd"].get("guacd_log_handshake_failure", "cdecl")
    guacd_log_handshake_failure.argtypes = []
    guacd_log_handshake_failure.restype = None

# /tmp/guacamole-server/src/guacd/ctypes_wrapper.h: 15
try:
    GUACD_DEFAULT_BIND_HOST = 'localhost'
except:
    pass

# /tmp/guacamole-server/src/guacd/ctypes_wrapper.h: 21
try:
    GUACD_DEFAULT_BIND_PORT = '4822'
except:
    pass

# /tmp/guacamole-server/src/guacd/ctypes_wrapper.h: 93
try:
    GUACD_LOG_NAME = 'guacd'
except:
    pass

# /tmp/guacamole-server/src/guacd/log.h: 37
try:
    GUACD_LOG_NAME = 'guacd'
except:
    pass

guac_client = struct_guac_client# /opt/guacamole/include/guacamole/client.h: 48

guacd_config = struct_guacd_config# /tmp/guacamole-server/src/guacd/ctypes_wrapper.h: 70

guac_socket = struct_guac_socket# /opt/guacamole/include/guacamole/socket.h: 39

# No inserted files

# No prefix-stripping

